--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
 
       <div class="card">
-        <video class="card-img-top" src="/img/videos/Calculadora Js - Google Chrome 2022-12-29 04-29-23.m4" width="500" height="250" autoplay controls preload="auto"> alt="Card image cap" </video>  
+        <video class="card-img-top" src="/img/videos/Calculadora Js - Google Chrome 2022-12-29 04-29-23.mp4" width="500" height="250" autoplay controls muted preload="auto"> alt="Card image cap" </video>  
         <div class="card-body">
           <h4 class="card-title">Calguladora Js</h4>
           <p class="card-text">
