--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="card">
         <video class="card-img-top" src="/img/videos/Calculadora Js - Google Chrome 2022-12-29 04-29-23.mp4" width="500" height="250" autoplay controls muted preload="auto"> alt="Card image cap" </video>  
         <div class="card-body">
-          <h4 class="card-title">Calguladora Js</h4>
+          <h4 class="card-title">Calculadora Js</h4>
           <p class="card-text">
             Este sitio fue realizado para la entrega final en el curso de Desarrollo web para coder House.
             Se desarrollo usando html, css,sass y bootstrap.
