--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
        </p>
       </div>
       <div class="header__img">
-        <img src="/img/foto-cv2.0.jpg" class="img-fluid" alt="Alejandro">
+        <img src="img/foto-cv2.0.jpg" class="img-fluid" alt="Alejandro">
       </div>
     </div>
   </div>
@@ -110,7 +110,7 @@
       </div>
 
       <div class="card">
-        <video class="card-img-top" src="/img/videos/Calculadora Js - Google Chrome 2022-12-29 04-29-23.mp4" width="500" height="250" autoplay controls muted preload="auto"> alt="Card image cap" </video>  
+        <video class="card-img-top" src="img/videos/Calculadora Js - Google Chrome 2022-12-29 04-29-23.mp4" width="500" height="250" autoplay controls muted preload="auto"> alt="Card image cap" </video>  
         <div class="card-body">
           <h4 class="card-title">Calculadora Js</h4>
           <p class="card-text">
@@ -274,20 +274,21 @@
 
     <div class=" icons-redes" data-aos="fade-left">
       <div class="icon-Linkedin">
-       <a href="https://www.linkedin.com/in/alejandro-bonaf%C3%B3s-b13b04172/"><img src="/img/icons/linkedin.png" alt="Linkedin">
+       <a href="https://www.linkedin.com/in/alejandro-bonaf%C3%B3s-b13b04172/">
+        <img src="img/icons/linkedin.png" alt="Linkedin">
         <span>/alejandro-bonafos</span>
        </a>
       </div>
       <div class="icon-Whatsapp">
         <a href="https://web.whatsapp.com/">
-         <img src="/img/icons/whatsapp.png" alt="Whatsapp">
+         <img src="img/icons/whatsapp.png" alt="Whatsapp">
          <span> +593624715127</span>
         </a>
       </div>
       
       <div class="icon-Github">
         <a href="https://github.com/Alejandro-Bonafos">
-        <img src="/img/icons/signo-de-github.png" alt="Github">
+        <img src="img/icons/signo-de-github.png" alt="Github">
         <span>/Alejandro-Bonafos</span>
       </a>
       </div>
