cambios en responsive

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="card">
         <video class="card-img-top" src="img/videos/Francia-cafe.mp4" width="500" height="250" autoplay controls> alt="Card image cap" </video>  
         <div class="card-body">
-          <h4 class="card-title">Proyecto "Café Francia"</h4>
+          <h4 class="card-title">"Café Francia"</h4>
           <p class="card-text">
             Este sitio fue realizado para la entrega final en el curso de Desarrollo web para coder House.
             Se desarrollo usando html, css,sass y bootstrap.
@@ -100,10 +100,9 @@
       <div class="card">
         <video class="card-img-top" src="img/videos/F1 — .mp4" width="500" height="250" autoplay controls preload="auto"> alt="Card image cap" </video>  
         <div class="card-body">
-          <h4 class="card-title">F1 card's"</h4>
+          <h4 class="card-title">Site F1 card's"</h4>
           <p class="card-text">
-            Este sitio fue realizado para la entrega final en el curso de Desarrollo web para coder House.
-            Se desarrollo usando html, css,sass y bootstrap.
+            Este sitio fue realizado mediante HTML,CSS Y Bootstrap con el fin de poner en practica el uso del los mismos.
           </p>
           <a href=" https://alejandro-bonafos.github.io/Proyecto-final/ " target="_blank" class="btn btn-outline-primary">Ir al sitio</a>
         </div>
@@ -113,8 +112,7 @@
         <div class="card-body">
           <h4 class="card-title">cannin Store"</h4>
           <p class="card-text">
-            Este sitio fue realizado para la entrega final en el curso de Desarrollo web para coder House.
-            Se desarrollo usando html, css,sass y bootstrap.
+            Proyecto en desarrollo con html,css y JavaScript. El mismo aun no esta finalizado ya que faltan algunas funcionalidades y algunos arreglos esteticos.
           </p>
           <a href=" https://alejandro-bonafos.github.io/Proyecto-final/" target="_blank" class="btn btn-outline-primary">Ir al sitio</a>
         </div>
@@ -124,8 +122,7 @@
         <div class="card-body">
           <h4 class="card-title">Calculadora Js</h4>
           <p class="card-text">
-            Este sitio fue realizado para la entrega final en el curso de Desarrollo web para coder House.
-            Se desarrollo usando html, css,sass y bootstrap.
+            App creada con html,css y JavaScript con el fin de poner en practica el uso y funcionalidades de JS.
           </p>
           <a href=" https://alejandro-bonafos.github.io/Proyecto-final/ " target="_blank" class="btn btn-outline-primary">Ir al sitio</a>
         </div>
@@ -189,6 +186,9 @@
         <div class="el__overflow">
           <div class="el__inner">
             <div class="el__bg"></div> 
+            <div class="el__preview-cont">
+              <h2 class="el__heading"></h2>
+            </div>
             <div class="el__content">
               <div class="el__close-btn"></div>
             </div>
@@ -202,7 +202,7 @@
           <div class="el__inner">
             <div class="el__bg"></div>
             <div class="el__preview-cont">
-              <h2 class="el__heading">Section 2</h2>
+              <h2 class="el__heading"></h2>
             </div>
             <div class="el__content">
               <div class="el__close-btn"></div>
@@ -217,9 +217,9 @@
           <div class="el__inner">
             <div class="el__bg"></div> 
               <div class="el__preview-cont">
-                <h2 class="el__heading">Section 2</h2>
+                <h2 class="el__heading"></h2>
               </div>          
-            <div class="el__content">    
+            <div class="el__content" >    
               <div class="el__close-btn"></div>
             </div>
           </div>
@@ -232,7 +232,7 @@
           <div class="el__inner">
             <div class="el__bg"></div>
             <div class="el__preview-cont">
-              <h2 class="el__heading">Section 2</h2>
+              <h2 class="el__heading"></h2>
             </div>      
             <div class="el__content">
               <div class="el__close-btn"></div>
