--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <p class="card-text">
             App creada con html,css y JavaScript con el fin de poner en practica el uso y funcionalidades de JS.
           </p>
-          <a href=" https://alejandro-bonafos.github.io/Proyecto-final/ " target="_blank" class="btn btn-outline-primary">Ir al sitio</a>
+          <a href=" https://alejandro-bonafos.github.io/CalculadoraJs/ " target="_blank" class="btn btn-outline-primary">Ir al sitio</a>
         </div>
       </div>
     </div>
