--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
          <h2>I'm Alejandro Bonafos</h2>
          <span> Desarrollador Web </span>
     </div>
-    <div id="clockDisplay" class="clock" data-aos="fade-left"></div>
+    <div class="reloj">
+      <div id="clockDisplay" class="clock" data-aos="fade-left"></div>
+    </div>
     <div class="nav-contenedor"> 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,7 +112,7 @@
       <div class="card">
         <video class="card-img-top" src="img/videos/canni.mp4" width="500" height="250" autoplay controls> alt="Card image cap" </video>  
         <div class="card-body">
-          <h4 class="card-title">cannin Store"</h4>
+          <h4 class="card-title">Cannin Store"</h4>
           <p class="card-text">
             Proyecto en desarrollo con html,css y JavaScript. El mismo aun no esta finalizado ya que faltan algunas funcionalidades y algunos arreglos esteticos.
           </p>
