--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
   </div>
 
   <div id="descargar-cv">
-    <p> Te comparto mi curriculum por si te interesa descargarlo y asi saber un poco mas sobre mis conocimientos y experiencia lavoral.</p>
+    <p> Te comparto mi curriculum por si te interesa descargarlo y asi saber un poco mas sobre mis conocimientos y experiencia laboral.</p>
     <a href="documentos/Cv Bonafos Alejandro-2022.pdf" download="Curriculum Bonafos Alejandro">
       <img src="img/archivo.png" alt=""
       width="100px" height="100px">
