--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Portfolio Alejandro</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="Css/estilos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <!-- Google Fonts  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">  <!-- Google Fonts  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -20,7 +19,7 @@
 </head>
 
 <header>
-  <div class="header-nombre">
+  <div class="header-nombre"> 
     <div class="nombre">   
          <h2>I'm Alejandro Bonafos</h2>
          <span> Desarrollador Web </span>
@@ -28,33 +27,36 @@
     <div class="reloj">
       <div id="clockDisplay" class="clock" data-aos="fade-left"></div>
     </div>
-    <div class="nav-contenedor"> 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    
+  </div>
+
+  <div class="nav-contenedor">
+    <nav class="navbar bg-black navbar-expand-lg">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#proyectos">Proyectos <span class="sr-only">(current)</span></a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link " href="#proyectos">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contenedor-skills">Skills</a>
+              <a class="nav-link" href="#contenedor-skills"> Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#certificados">Certificados</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contactos">Contacto </a>
+              <a class="nav-link href="#contactos>Contacto </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#descargar-cv">Descargar cv</a>
             </li>
           </ul>
-          
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
   </div>
 </header>
 
@@ -323,10 +325,10 @@
   <script src="js/clook.js"></script>
   <script src="js/animate.js"></script>
   <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-   <!-- JavaScript AOS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
+
     AOS.init(
       {
         duration: 1000,
