--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link" href="#certificados">Certificados</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link href="#contactos>Contacto </a>
+              <a class="nav-link" href="#contactos">Contacto </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#descargar-cv">Descargar cv</a>
